# microservice-chatapp

./: .gitignore  AGENTS.md  CI_BADGES.md  CI_CACHING_STRATEGY.md  GITHUB_ISSUES.md  README.md  TESTS_README.md  run_all_tests.sh  run_microservice_tests.py
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  security.yml  unit-tests.yml
app/: AGENTS.md  README.md  docker-compose.yml
app/chat-service/: .dockerignore  .gitignore  Dockerfile  NAMING_CONVENTIONS.md  README.md  advanced_test.py  main.py  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  run_tests_optimized.py  simple_test.py  test_chat.py
app/chat-service/chat_app/: __init__.py  app.py  models.py  routes.py  services.py  websocket.py
app/chat-service/tests/: basic_test.py  conftest.py  run_tests.py  structure_test.py  test_api_endpoints.py  test_models.py  test_websocket.py
app/chat-service/tests/integration/: test_integration.py
app/chat-service/tests/linting/: test_linting.py
app/chat-service/tests/security/: test_security.py
app/chat-service/tests/unit/: test_api.py  test_code_coverage.py  test_complete_coverage.py  test_final_coverage.py  test_models.py  test_services.py
app/frontend-service/: .gitignore  Dockerfile  README.md  TESTING.md  eslint.config.js  index.html  mock-gateway.js  nginx.conf  package-lock.json  package.json  vitest.config.js  vitest.integration.config.js
app/gateway-service/: .dockerignore  Cargo.toml  Dockerfile  app.py  requirements.txt  run_tests.sh  test.sh
app/gateway-service/src/: auth.rs  error.rs  logging.rs  main.rs  tests.rs  validation.rs
app/gateway-service/tests/: basic_test.py  run_tests.py  test_app.py
(+53 files in other folders)
