[package]
name = "gateway-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.9"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
awc = "3.0"
validator = { version = "0.16", features = ["derive"] }